# url-shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
shortener_app/: config.py  crud.py  database.py  main.py
